uboot: update to a16b75f7740bae60e3049f710d9f7e8ac38deaa1
Signed-off-by: Addy Ke <addy.ke@rock-chips.com>

--- a/uboot/arch/arm/dts/rv1103b-u-boot.dtsi
+++ b/uboot/arch/arm/dts/rv1103b-u-boot.dtsi
@@ -14,6 +14,16 @@
 		stdout-path = &uart0;
 		u-boot,spl-boot-order = &sdmmc0, &spi_nand, &spi_nor, &emmc;
 	};
+
+	secure-otp@20790000 {
+		compatible = "rockchip,rv1103b-secure-otp";
+		reg = <0x20790000 0x10000>;
+		secure_conf = <0x20250018>;
+		cru_rst_addr = <0x20000a20>;
+		mask_addr = <0x209d0000>;
+		u-boot,dm-spl;
+		status = "okay";
+	};
 };
 
 &hw_decompress {
@@ -43,43 +53,12 @@
 
 &sdmmc0 {
 	u-boot,dm-spl;
-	pwr-en-gpios = <&gpio0 RK_PA4 GPIO_ACTIVE_LOW>;
-	pinctrl-names = "default", "idle";
-	pinctrl-0 = <&sdmmc0_clk_pins &sdmmc0_cmd_pins &sdmmc0_det_pins &sdmmc0_bus4_pins>;
 	status = "okay";
-};
-
-&sdmmc0_pins {
-	u-boot,dm-spl;
-};
-
-&sdmmc0_clk_pins {
-	u-boot,dm-spl;
-};
-
-&sdmmc0_cmd_pins {
-	u-boot,dm-spl;
-};
-
-&sdmmc0_det_pins {
-	u-boot,dm-spl;
-};
-
-&sdmmc0_bus4_pins {
-	u-boot,dm-spl;
 };
 
 &ioc {
 	u-boot,dm-spl;
 	status = "okay";
-};
-
-&pcfg_pull_up_drv_level_2 {
-	u-boot,dm-spl;
-};
-
-&pcfg_pull_up {
-	u-boot,dm-spl;
 };
 
 &gpio0 {
@@ -96,7 +75,6 @@
 	u-boot,dm-pre-reloc;
 	status = "okay";
 };
-
 
 &crypto {
 	u-boot,dm-spl;
@@ -137,4 +115,24 @@
 		spi-rx-bus-width = <4>;
 		spi-max-frequency = <80000000>;
 	};
+};
+
+&u2phy {
+	u-boot,dm-pre-reloc;
+	status = "okay";
+};
+
+&u2phy_otg {
+	u-boot,dm-pre-reloc;
+	status = "okay";
+};
+
+&usbdrd {
+	u-boot,dm-pre-reloc;
+	status = "okay";
+};
+
+&usbdrd_dwc3 {
+	u-boot,dm-pre-reloc;
+	status = "okay";
 };
