--- a/uboot/arch/arm/dts/rv1103b.dtsi
+++ b/uboot/arch/arm/dts/rv1103b.dtsi
@@ -990,6 +990,7 @@
 		interrupts = <GIC_SPI 52 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&cru SCLK_SFC_2X>, <&cru HCLK_SFC>;
 		clock-names = "clk_sfc", "hclk_sfc";
+		rockchip,max-dll = <0xFF>;
 		rockchip,sclk-x2-bypass;
 		#address-cells = <1>;
 		#size-cells = <0>;
