--- a/uboot/configs/rk3506_tb.config
+++ b/uboot/configs/rk3506_tb.config
@@ -1,5 +1,6 @@
 CONFIG_DEBUG_UART_SKIP_INIT=y
 CONFIG_DEFAULT_DEVICE_TREE="rk3506-evb-tb"
+CONFIG_OF_LIST="rk3506-evb-tb"
 # CONFIG_SPL_AB is not set
 CONFIG_SPL_ADC_SUPPORT=y
 CONFIG_SPL_INPUT=y
