--- a/uboot/drivers/mtd/nand/spi/Kconfig
+++ b/uboot/drivers/mtd/nand/spi/Kconfig
@@ -39,6 +39,16 @@ config SPI_NAND_WINBOND
 	help
 	  Add support for various WINBOND SPI Nand flash chips
 
+if SPI_NAND_WINBOND
+
+config SPI_NAND_WINBOND_CONT_READ
+	bool "WINBOND SPI flash continuous read support"
+	default n
+	help
+	 Add support for WINBOND SPI Nand flash chips cont read.
+
+endif
+
 config SPI_NAND_DOSILICON
 	bool "DOSILICON SPI flash support"
 	default y
