--- a/uboot/arch/arm/dts/Makefile
+++ b/uboot/arch/arm/dts/Makefile
@@ -57,10 +57,10 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += \
 	rk3399-puma-ddr1600.dtb \
 	rk3399-puma-ddr1866.dtb \
 	rv1103b-evb1.dtb \
-	rv1103c-evb2.dtb \
-	rv1103c-evb2-spi-nand.dtb \
 	rv1106-evb.dtb \
 	rv1106-evb2.dtb \
+	rv1106b-evb2.dtb \
+	rv1106b-evb2-spi-nand.dtb \
 	rv1108-evb.dtb
 dtb-$(CONFIG_ARCH_MESON) += \
 	meson-gxbb-odroidc2.dtb
