--- a/uboot/arch/arm/dts/rk3576.dtsi
+++ b/uboot/arch/arm/dts/rk3576.dtsi
@@ -2895,7 +2895,7 @@
 		ranges = <0x00000800 0x0 0x20000000 0x0 0x20000000 0x0 0x00100000
 			  0x81000000 0x0 0x20100000 0x0 0x20100000 0x0 0x00100000
 			  0x82000000 0x0 0x20200000 0x0 0x20200000 0x0 0x00e00000
-			  0xc3000000 0x9 0x00000000 0x9 0x00000000 0x0 0x80000000>;
+			  0x83000000 0x9 0x00000000 0x9 0x00000000 0x0 0x80000000>;
 		reg = <0x0 0x2a200000 0x0 0x00010000>,
 		      <0x0 0x22000000 0x0 0x00400000>,
 		      <0x0 0x20000000 0x0 0x00100000>;
@@ -3152,8 +3152,8 @@
 		power-domains = <&power RK3576_PD_USB>;
 		pinctrl-0 = <&ufs_rst &ufs_refclk>;
 		pinctrl-names = "default";
-		resets = <&cru SRST_A_UFS_BIU>;
-		reset-names = "rst";
+		resets = <&cru SRST_A_UFS_BIU>, <&cru SRST_A_UFS_SYS>, <&cru SRST_A_UFS>, <&cru SRST_P_UFS_GRF>;
+		reset-names = "biu", "sys", "ufs", "grf";
 		status = "disabled";
 	};
 
@@ -3165,6 +3165,7 @@
 		clock-names = "clk_sfc", "hclk_sfc";
 		assigned-clocks = <&cru SCLK_FSPI1_X2>;
 		assigned-clock-rates = <80000000>;
+		rockchip,max-dll = <0xFF>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
@@ -3230,6 +3231,7 @@
 		clock-names = "clk_sfc", "hclk_sfc";
 		assigned-clocks = <&cru SCLK_FSPI_X2>;
 		assigned-clock-rates = <80000000>;
+		rockchip,max-dll = <0xFF>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "disabled";
