--- a/uboot/configs/rv1103b-usbplug.config
+++ b/uboot/configs/rv1103b-usbplug.config
@@ -8,8 +8,8 @@ CONFIG_CMD_PINMUX=y
 # CONFIG_CMD_REGULATOR is not set
 CONFIG_CMD_SAVEENV=y
 CONFIG_CMD_USB=y
-CONFIG_DEBUG_UART_BASE=0xff4c0000
-CONFIG_DEFAULT_DEVICE_TREE="rv1106-evb"
+CONFIG_DEBUG_UART_BASE=0x20540000
+CONFIG_DEFAULT_DEVICE_TREE="rv1103b-evb1"
 CONFIG_DM_REGULATOR_FIXED=y
 CONFIG_DM_REGULATOR_GPIO=y
 CONFIG_DM_REGULATOR=y
@@ -44,14 +44,14 @@ CONFIG_PINMUX=y
 # CONFIG_REGULATOR_FAN53555 is not set
 # CONFIG_REGULATOR_PWM is not set
 # CONFIG_REGULATOR_RK860X is not set
-CONFIG_ROCKCHIP_BOOT_MODE_REG=0xff020200
+CONFIG_ROCKCHIP_BOOT_MODE_REG=0x20160200
 CONFIG_ROCKCHIP_GPIO_V2=y
 CONFIG_ROCKCHIP_GPIO=y
-CONFIG_ROCKCHIP_IRAM_START_ADDR=0xff6c0000
+CONFIG_ROCKCHIP_IRAM_START_ADDR=0x210f6000
 CONFIG_ROCKCHIP_NEW_IDB=y
-CONFIG_ROCKCHIP_RV1106=y
+CONFIG_ROCKCHIP_RV1103B=y
 # CONFIG_ROCKCHIP_RV1126 is not set
-CONFIG_ROCKCHIP_STIMER_BASE=0xff590020
+CONFIG_ROCKCHIP_STIMER_BASE=0x20500000
 CONFIG_ROCKCHIP_VENDOR_PARTITION=y
 # CONFIG_SPI_NAND_BIWIN is not set
 CONFIG_SPI_NAND_DOSILICON=y
@@ -75,9 +75,9 @@ CONFIG_SPI_NAND_XTX=y
 # CONFIG_SPI_NAND_ZBIT is not set
 # CONFIG_SPL_DM_REGULATOR_FIXED is not set
 # CONFIG_SPL_DM_REGULATOR is not set
-CONFIG_SYS_BOARD="evb_rv1106"
-CONFIG_SYS_CONFIG_NAME="evb_rv1106"
-CONFIG_TARGET_EVB_RV1106=y
+CONFIG_SYS_BOARD="evb_rv1103b"
+CONFIG_SYS_CONFIG_NAME="evb_rv1103b"
+CONFIG_TARGET_EVB_RV1103B=y
 CONFIG_USB_GADGET_PRODUCT_NUM=0x110c
 CONFIG_USB_HOST=y
 CONFIG_USB_STORAGE=y
